# spongebb

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  .mcp.json  CLAUDE.md  Dockerfile  Makefile  README.md  catalog-info.yaml  docker-compose.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml  pyrightconfig.json  rename_todo.md
.claude/: memory.db
.claude-flow/: daemon-state.json
.claude-flow/memory/: store.json
.claude-flow/metrics/: .session-worker-last  codebase-map.json
.claude-flow/sessions/: session-1769190932609-msk1kj.json  session-1770292097680-he5r37.json  session-1771686241878-ags560.json  session-1771688341963-1pqbwq.json
.claude/context_bundles/: 22_jan_session_51cf6ddf-f5ae-4530-a941-d8929cac5166.json  22_jan_session_958cc76f-8a74-40e2-9398-8bfebb2990d6.json  22_jan_session_d9a23ee4-29c5-4311-94da-647ef5cf06d8.json  23_jan_session_0b122aae-f628-4f77-98d3-26efc3a19bcb.json  23_jan_session_24d96840-05d8-421f-b673-1d30cd1b21eb.json  23_jan_session_7469db59-e47e-426a-9456-3b7c0900db77.json  23_jan_session_755183f5-ea7f-44ef-9f4c-77c54a3df06c.json  23_jan_session_8223bd6a-10e4-4be0-a437-f85e042eff0c.json  23_jan_session_96903c3c-b2b9-4cd4-9504-6f1c0222e829.json  24_jan_session_24b6c75e-5338-458c-a321-14cc305431d6.json  24_jan_session_ae2c40ee-409c-4f2d-bd6d-6526a0a0c9d8.json  24_jan_session_af0eed25-4160-46c5-9d33-b1b457675c81.json
.claude/stats/: agent_spawns.jsonl  ralph_cooldown.json  session_metrics.jsonl  subagent_completions.jsonl
.claude/tdd-guard/data/: test.json
.claude/validation/: config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml  sync-planning.yml  trigger-progressive-deploy.yml  visual-regression.yml
.planning/: .github-project  AUDIT_SWOT_2026-02.md  GSD_PHASES_11-15.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-ROADMAP.md  v2.0-ROADMAP.md  v3.0-ROADMAP.md  v4.0-ROADMAP.md  v5.0-REQUIREMENTS.md  v5.0-ROADMAP.md
.planning/phase-14-news-intelligence/: 14-01-PLAN.md  14-02-PLAN.md  14-03-PLAN.md  14-04-PLAN.md  14-05-PLAN.md  14-06-PLAN.md  14-07-PLAN.md  14-08-PLAN.md  14-09-PLAN.md  CONTEXT.md
.planning/phases/: phase-11.md  phase-12.md  phase-13.md  phase-14.md  phase-15.md
.planning/phases/03-overnight-rates-fx/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-UAT.md
.planning/phases/04-market-indicators/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-UAT.md
.planning/phases/05-capital-flows-stress/: 05-01-PLAN.md  05-02-PLAN.md  05-03-PLAN.md  05-04-PLAN.md  05-05-PLAN.md  05-CONTEXT.md  05-RESEARCH.md  05-UAT.md
.planning/phases/05-stress-indicators/: FRED_SERIES_CHEATSHEET.md  RESEARCH.md  TECHNICAL_REFERENCE.md
.planning/phases/06-credit-bis-data/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md
.planning/phases/07-liquidity-calculations/: 07-01-PLAN.md  07-02-PLAN.md  07-03-PLAN.md  07-04-PLAN.md  07-SUMMARY.md  07-UAT.md
.planning/phases/08-analysis-correlations/: 08-01-PLAN.md  08-02-PLAN.md  08-03-PLAN.md  08-CONTEXT.md  08-RESEARCH.md  08-SUMMARY.md
.planning/phases/09-calendar-api/: 09-01-PLAN.md  09-02-PLAN.md  09-03-PLAN.md  09-04-PLAN.md  09-CONTEXT.md  09-SUMMARY.md
.planning/phases/10-visualization-alerting/: 10-01-PLAN.md  10-02-PLAN.md  10-03-PLAN.md  10-04-PLAN.md  10-05-PLAN.md  10-06-PLAN.md  10-06-SUMMARY.md  10-CONTEXT.md  10-SUMMARY.md
.planning/phases/11-high-frequency-data-layer/: 11-01-PLAN.md  11-02-PLAN.md  11-03-PLAN.md  11-04-PLAN.md  11-05-PLAN.md  11-06-PLAN.md  CONTEXT.md  RESEARCH.md  SUMMARY.md
.planning/phases/12-nowcasting-forecasting/: 12-01-PLAN.md  12-02-PLAN.md  12-03-PLAN.md  12-04-PLAN.md  CONTEXT.md  SUMMARY.md
.planning/phases/13-risk-metrics/: 13-01-PLAN.md  13-02-PLAN.md  13-03-PLAN.md  13-04-PLAN.md  13-05-PLAN.md  13-UAT.md  CONTEXT.md  SUMMARY.md
.planning/phases/14-news-intelligence/: 14-UAT.md  SUMMARY.md
.planning/phases/15-backtesting/: 15-01-PLAN.md  15-02-PLAN.md  15-03-PLAN.md  15-04-PLAN.md  15-05-PLAN.md  15-06-PLAN.md  CONTEXT.md  RESEARCH.md  SUMMARY.md
.planning/phases/16-eia-oil-data/: 16-01-PLAN.md  16-02-PLAN.md  16-03-PLAN.md  (+3 more)
.planning/reference/: CLAUDE_CODE_SUPERVISION.md
.planning/research/: RESEARCH-13.md  SUMMARY.md  architecture.md  features-api.md  pitfalls-risks.md  stack-tech.md
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  style_conventions.md  suggested_commands.md  task_completion.md
.swarm/: hnsw.index  hnsw.metadata.json  memory.db  schema.sql
docker/: entrypoint.sh
docs/: ARCHITECTURE.md  HANDOFF_2026-03-13_DASHBOARD_DEPLOY.md  dashboard_panel_health_plan.md  nautilus_integration.md
scripts/: dashboard_panel_probe.py  run-dashboard.sh  run_dashboard.py  validate-automations.sh  validate.sh
src/liquidity/: config.py
tests/collectors/: test_credit.py
tests/e2e/: test_dashboard_real_data.py
tests/e2e_ui/: dashboard.e2e.spec.js  dashboard.panel-health.e2e.spec.js  dashboard.semantic-health.e2e.spec.js
tests/integration/: test_analyzers.py  test_calculators.py  test_cofer.py  test_commodities.py  test_credit_bis.py  test_etf_flows.py  test_fed_custody.py  test_fx_collector.py  test_overnight_rates.py  test_risk_etfs.py  test_sofr_collector.py  test_stress.py  test_tic.py
tests/unit/: test_bis.py  test_correlation_engine.py  test_fed_custody.py  test_global_liquidity.py  test_move_zscore.py  test_net_liquidity.py  test_positioning.py  test_regime_classifier.py  test_stealth_qe.py  test_validation.py  test_vix_term_structure.py  test_volatility_signal.py
tests/visual/: dashboard.visual.spec.js
(+374 files in other folders)
